Opened 12 years ago
Closed 11 years ago
#9972 closed bug (fixed)
[Build System] many files are not identified
Reported by: | diver | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Build System | Version: | R1/Package Management |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
To list some of them do a query for readme files. It is also impossible to use Open with menu to open them in StyledEdit.
If I copy such a readme file to the Desktop double click identifies it ok.
Note:
See TracTickets
for help on using tickets.
I fixed the cause of the issue in hrev46407 (
mimeset
not identifying text files when using a custom MIME DB). Obviously all concerned packages have to be rebuilt.For the second part of the issue -- Tracker not being able to handle those files correctly -- I have opened #10234 instead.