mimeset: Use TextSnifferAddon when using a custom MIME DB

That addresses the problem that packaged text files aren't correctly
identified (ticket #9972). All concerned packages have to be rebuilt,
of course.