headers/build/os/add-ons/registrar/MimeSnifferAddon.h
@@ -1,0 +1,1 @@
+#include <../os/add-ons/registrar/MimeSnifferAddon.h>
